@@ -22,5 +22,7 @@ PHP                                                                        NEWS
 - Fixed bug #34310 (foreach($arr as $c->d => $x) crashes). (Dmitry)
 - Fixed bug #34302 (date('W') do not return leading zeros for week 1 to 9).
   (Derick)
+- Fixed bug #34277 (array_filter() crashes with references and objects).
+  (Dmitry)
 - Fixed bug #33957 (gmdate('W')/date('W') sometimes returns wrong week number).
   (Derick)
